# santic-validation

./: .gitignore  LICENSE  README.rst  setup.cfg  tox.ini
.github/workflows/: python-package.yml
santic_validation/: __init__.py  decorator.py  fields.py  utils.py
tests/: test_decorator.py  test_fields.py  test_utils.py
