[metadata]
name = santic-validation
version = 0.0.3
url = https://github.com/weiztech/santic-validation
license = MIT
author = Weiztech
description = Sanic pydantic validation
long_description = file: README.rst
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    pydantic
    sanic

[options.extras_require]
test =
    sanic
    sanic-testing
    pydantic
    pytest
    pytest-asyncio
    tox


[flake8]
max-line-length = 88
per-file-ignores =
    __init__.py: F401